--- a/views/ex2.html
+++ b/views/ex2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Send JSON to API</title>
-    <script src="../public/ex2.js"></script>
 </head>
 <body>
-    <h2><a href="../index.html">Links to Start Page</a></h2>
+    <h2><a href="/">Links to Start Page</a></h2>
     <h3>Luca's Countries API Call</h3>
     <button id="callapi">Call API</button>
     <div id="response"></div>
+    <script src="/ex2.js"></script>
 </body>
 </html>
